--- a/Part_1_Data_Viz.Rmd
+++ b/Part_1_Data_Viz.Rmd
@@ -40,7 +40,7 @@ Aims of Part 1:
 1. __ggplot__ - how building a `ggplot` works step by step.
 
 
-2. __CRAP & ggplot?__ - core graphical principles (CRAP - Contrast, Repition, Alignment and Proximity) that when applied to data in R can help visualise science in a meaningful (and beautiful) way!
+2. __CRAP & ggplot?__ - core graphical principles (CRAP - Contrast, Repition, Alignment and Proximity) that when applied to data in R can help visualise data in a meaningful (and beautiful) way!
 
 
 
@@ -53,13 +53,13 @@ Start by loading your libraries:
 # if you need to install these run the code install.packages("package_name")
 
 library(tidyverse) #includes ggplot2
-library(ggthemes)
+library(ggthemes) 
 library(ggrepel) # for annotations 
 library(viridis) # for color blind friendly colours 
 library(RColorBrewer) # gives nice colour palettes for different types of data i.e. continuous vs discrete
 library(reshape2)
-library(ggsci)
-library(patchwork)
+library(ggsci) # interesting set of colour palettes
+library(patchwork) # for placing plots next to eachother
 
 ```
 
@@ -107,9 +107,6 @@ __3. geom__ corresponds to the type of plot you are trying to make (histogram, b
 
 ***
 
-
-### Hey Charlotte - lets review qplot and how we're going for time if it should be cut out
-
 ##### Coding a ggplot
 
 There are two main functions for creating plots in the ggplot2 package: a `qplot()` and `ggplot()` function: 
@@ -119,6 +116,7 @@ There are two main functions for creating plots in the ggplot2 package: a `qplot
 
 
 ##### check data first
+
 Today we'll be using the 'iris' data which is freely available and can be accesssed directly from R.
 
 ```{r}
@@ -296,10 +294,13 @@ ggsave("plots/iris_petal_width_to_length_plot.pdf", )
 ***
 
 
-We can look to use some simple core graphical principles (CRAP - Contrast, Repition, Alignment and Proximity) that when applied to can help visualise data in a beautiful (and meaningful) way! The CRAP principles of design were developed by [Robin Williams](https://www.amazon.com.au/Non-Designers-Design-Book-Robin-Williams/dp/0133966151). Perfect for relative beginners in design, Robin developed four easy principles that when applied to data visualisation, can help communicate data in more effective ways. 
+We can look to use some simple core graphical principles (CRAP - Contrast, Repition, Alignment and Proximity) that when applied to our plotting can help visualise data in a beautiful (and meaningful) way! The CRAP principles of design were developed by [Robin Williams](https://www.amazon.com.au/Non-Designers-Design-Book-Robin-Williams/dp/0133966151). Perfect for relative beginners in design, Robin developed four easy principles that when applied can help unify projects through clarifying concepts and relationships between elements, enhancing design and ultimately communicate data in more effective ways. 
 
 
 Some of these principles we can look to directly apply during graphics creation in R, whereas others can be applied during figure creation, or even during production of graphical abstracts. 
+
+
+As with many things in R - there are multiple ways you can achieve these things in ggplot(). Here we specify some options for you to explore with your own data visualisations!
 
 
 #### C - Contrast 
@@ -308,18 +309,26 @@ Some of these principles we can look to directly apply during graphics creation 
 If two items are not exactly the same, make them different! Applying contrast can help attract attention to important elements, and groups of elements by making them stand out. 
 
 
+We can look to do this in plots by emphasising group difference with colour and size, in addition to using different font families, and font sizes for plot annotation. 
+
+
 _Fonts_
 
 
-We can look to do this in plots by emphasising group difference with colour and size, in addition to using different font families, and font sizes for plot annotation. We will learn how to specify fonts and font sizes in ggplot theme() in section R - Repetition below. 
+There are many fonts, and font weights (i.e. **bold**, *italic*, light) you can specify in R. Fonts have both short names and canonical names - you can specify either.
 
 
-There are many fonts, and font weights (i.e. **bold**, *italic*, light) you can specify in R. Fonts have both short names and canonical names you can specify in R. 
+Why change fonts to add contrast? Different fonts, and font families can be specific for different groups of text on a design (i.e a heading vs a subtitle, or axis text vs text within a plot). This can aid in visually differentiating text elements in a figure.
 
 
+If you want to go all out on using custom fonts - we suggest looking into [extrafont](https://cran.r-project.org/web/packages/extrafont/index.html) and [showtext](https://cran.r-project.org/web/packages/showtext/index.html) packages. 
+
+
+How can we change fonts in ggplot? The easiest way to do this is through editing the theme() and use element_text to change the family and face of font. You can do this for the whole plot, or for specific elements of the plot. (Note for text options on plots you can also use geom_text()!)
 
 ```{r}
 
+# First lets make a basic plot 
 baseplot <- iris_petal_width_to_length_plot + theme_bw() + labs(title = "Iris Petal Length to Width")
 
 baseplot
@@ -338,9 +347,12 @@ baseplot +
         axis.text.x   = element_text(family = "Optima"),
         axis.text.y   = element_text(family = "Luminari"))
 
-
-
 ```
+
+Lets have a look at some of the font options that are available without having to play around with other packages! 
+
+
+The table generated below shows you some of these font types available to you in R - this might throw up some warnings, the advice here is that the basic fonts (at the bottom) of the table work - others can be a little more tricky.
 ```{r message = F, warning = FALSE}
 fonttable <- read.table(header=TRUE, sep=",", stringsAsFactors=FALSE,
                         text='
@@ -386,63 +398,94 @@ pf
 _Colour_
 
 
-Colour is also a powerful tool and can be used to explain levels of data (e.g. through application of a gradient) in addition to simple, and more complex hierachical grouping structures. 
+We all want to use colour in our plots and it is no surprise that it can be key to producing clear and beautiful graphics. 
 
-A online tools for choosing a palettes based on colour theory: 
+Colour is also a powerful tool that can be used to explain levels of datain addition to simple, and more complex hierachical grouping structures. 
+
+So how do we go about choosing colour(s) for our visualisations?
 
 
-+ [adobe colour](color.adobe.com)  
+There are a number of things we need to consider: 
 
 
-  ![Using a study image to create a palette](Adobe_colour.png)
-  
-  
+* Data types and structure: colour choice will be inherently related to your graphics and the type of plot you are creating. For example, would you like colour to help differentiate between groupings (for example different levels of a treatment), or would you like colour to convey data itself through use of a gradient? 
 
-When we think about including colour in our graphics we need to make sure we think about useability and accessability; where we make sure that the palette (range of colours) we choose are not misleading, and are differentiated for those with varying colourblindness.
+* Useability and accessibility: When we think about including colour in our graphics we need to make sure we think about useability and accessability; where we make sure that the palette (range of colours) we choose are not misleading, and are differentiated for those with varying colourblindness.
+
 
  ![Traditional palettes vs....](Colour_blind_perceptually_uniform_colours.png)
 
 
+Data types and structure: 
 
-To help deal with problems associated with useability and accessability there are a number of really useful packages developed in R (in addition to a colour blind checker on adobe colour!). These include: 
-
-
-  + Greys
-
-
-  Sometimes absence of colour can be more powerful in communicating ideas. R has a number of built in grey palettes. 
-  
-  Usage in ggplot: 
-      
-        + scale_fill_grey() for box plot, bar plot, violin plot, dot plot etc.
-        
-        + scale_color_grey() for lines and points
-        
-
-+ RColorBrewer palettes
-  
-  
-  The RColorBrewer package creates great palettes - that can also be filtered to be colourblind friendly.
-  
-  The package contains 3 sets of colour palette: sequential, qualitative and diverging. Understanding these groupings of colour can help in choosing how to include colour within your plots.
-  
-Tip: try and not go over 10 colours max for reliable differentiation
-
-  
   1. Sequential - ordered data that progress from low to high.
   
+  
   2. Qualitative - best suited for nominal or categorical data where colour does not imply magnitude between groups.
+  
   
   3. Diverging - these put equal emphasis on mid-range and extreme values at both ends of the data range.
   
   
   ![Using colour to represent data values](Colour_types.png)
+
+
+Tip: try and not go over 10 colours max for reliable differentiation. If you need more than 10 colours, try changing the hue, opacicity and lightness of pairs of colours.
+
+How to change and choose colours for our ggplots()?
+
+There are several ways (and endless online material) that can help you choose and specify colour in ggplot. 
+
+One of my favourites is an online tool for choosing a palettes based on colour theory: 
+
++ [adobe colour](color.adobe.com)  This is limited to choosing 5 colours as of now - there are other options online for palettes with more colours!
+
+  ![Using a study image to create a palette](Adobe_colour.png)
   
- 
+Using color.adobe you can extract the hex.codes for your colors of choice and manually assign them in ggplot. 
+
+        + scale_fill_manual() for box plot, bar plot, violin plot, dot plot etc.
+        
+        + scale_color_manual() for lines and points
+
+```{r}
+group.colors <- c("#EBD44F","#E823A8","#229E84")
+
+# Remember to specify what you want grouping you want the points coloured by in aes() 
+
+ggplot(iris, aes(Sepal.Length, Sepal.Width, colour = Species))+
+  geom_point() +
+  theme_bw() +
+  labs(title = "Iris Petal Length to Width") + 
+  theme(text = element_text(family = "Times New Roman")) +
+  scale_color_manual(values = group.colors)
+  
+```
+
+To help deal with problems associated with useability and accessability there are a number of other really useful packages developed in R (in addition to a colour blind checker on adobe colour!). These include: 
+
+  + Greys
+
+  Sometimes absence of colour can be more powerful in communicating ideas. R has a number of built in grey palettes. 
+  
+  Usage in ggplot: 
+      
+          + scale_fill_grey() for box plot, bar plot, violin plot, dot plot etc.
+        
+          + scale_color_grey() for lines and points
+        
++ RColorBrewer palettes
+  
+  The RColorBrewer package creates great palettes that can also be filtered to be colourblind friendly.The package contains 3 sets of colour palette: sequential, qualitative and diverging. Understanding these groupings of colour can help in choosing how to include colour within your plots.
+  
+  Usage in ggplot: 
+    
+          + scale_fill_brewer() for box plot, bar plot, violin plot, dot plot etc.
+      
+          + scale_color_brewer() for lines and points
+
   Below are a few useful commands using RColorBrewer:
   
- 
- 
 ```{r}
 # Display all colour palettes 
 display.brewer.all()
@@ -451,30 +494,24 @@ display.brewer.all()
 display.brewer.all(n = NULL, type = "all", select = NULL, # type = "div","qual","seq"
                    colorblindFriendly = TRUE)
 
-#  Return the hexadecimal color specification 
-
-# brewer.pal(n, name) # where n is the number of colours you want from the palette - minimum is 3!
 
 # Display a single RColorBrewer palette 
 # by specifying its name
 
-# display.brewer.pal(n, name)
+display.brewer.pal(n = 10, "Paired")
+
+#  Return the hexadecimal color specification 
+
+brewer.pal(n = 10, "Paired") # where n is the number of colours you want from the palette - minimum is 3!
+
+
 
 ```
-  Usage in ggplot
   
   
-  
-      + scale_fill_brewer() for box plot, bar plot, violin plot, dot plot etc.
-      
-      + scale_color_brewer() for lines and points
-
-
-
-For those of you who are after a little more help - we can use ggsci(). ggsci offers a collection of color palettes inspired by scientific journals (as well as TV shows and science fiction!) 
+For those of you who are after a little more help in choosing colours - we can use ggsci(). ggsci offers a collection of color palettes inspired by scientific journals (as well as TV shows and science fiction!) 
 
 https://cran.r-project.org/web/packages/ggsci/vignettes/ggsci.html
-
 
 
 ```{r}
@@ -495,15 +532,13 @@ simpsons
 
 ```
 
-
-
 _Size_
 
 
-We can also change the size of the elements in a graph - which in itself can present data values or bring attention to one aspect of a plot. 
+We can also change the size of the elements in a graph which in itself can present data values or bring attention to one aspect of a plot. 
 
+Size can also be used to represent data values. When a third variable is mapped to the size of points this is called a bubble chart. 
 
-When a third variable is mapped to the size of points this is called a bubble chart.
 
 ```{r}
 
@@ -513,7 +548,8 @@ ggplot(iris, aes(Sepal.Length, Sepal.Width, colour = Species))+
   scale_color_simpsons() +
   theme_classic()
 
-# Change size of all points
+# Change size of all points based on third variable - petal.length
+
 bubble <- ggplot(iris, aes(Sepal.Length, Sepal.Width, colour = Species, size = Petal.Length))+
   geom_point(alpha = 0.5) +
   scale_size(name = "Petal length") +
@@ -531,13 +567,16 @@ bubble
 Repeat things in your design, throughout your design. This helps create a consistent look and feel, where recurring elements can help organise content and establish a sense of unity. 
 
 
-How? There are a number of ways we can bring repetition into our designs in R, namely through the use of themes.  
+How? There are a number of ways we can bring repetition into our designs in R, namely through the use of themes.
 
 
-Perfecting plots in ggplot can lead to a lot of lines starting with theme() quickly piling up. Doing this again for the next plot quickly leads to massive scripts with a lot of repetition. Instead, we suggest creating a customised theme for your manuscript/project that combines all of the elements in your theme that you want, and apply it to all of your plots for a project! You can add as many elements to your function as you want (as long as they do not contradict each other).
+Perfecting plots in ggplot can lead to a lot of lines starting with theme() quickly piling up. Doing this again for the next plot quickly leads to massive scripts with a lot of repetition. Instead, we suggest creating a customised theme for your manuscript/project that combines all of the elements in your theme that you want, and apply it to all of your plots for a project! 
 
 
-Below we provide an example of a function that makes a theme based off theme_bw(). This function takes no arguments, so is always coded as theme_name().
+There are multiple ways to make your own themes and specify them in ggplots. Earlier fiona demonstrated how this can be done through assigning a theme to an object.
+
+
+Below we provide an example of a function that makes a theme based off theme_bw(). This function takes no arguments, so is always coded as theme_name().You can add as many elements to your function as you want (as long as they do not contradict each other). Don't worry - this is probably one of the easiest themes you will ever write, and it allows you to build off pre-existing themes (so half the work is already done!).
 
 
 
@@ -579,7 +618,7 @@ mytheme
 See [here](https://ggplot2-book.org/polishing.html) for further pointers on adjusting your own theme. 
 
 
-Tip: If you do not want to create your own theme, there are a number of pre-specified themes built in to ggplot(). https://www.datanovia.com/en/blog/ggplot-themes-gallery/
+AND of course, if you do not want to create your own theme, there are a number of pre-specified themes built in to ggplot(). https://www.datanovia.com/en/blog/ggplot-themes-gallery/
 
 
 
@@ -633,6 +672,8 @@ OR for more intuitive layouts we can use / operator (next to) and | (below)
 (baseplot/simpsons/mytheme)|(bubble)
 
 ```
-https://gotellilab.github.io/GotelliLabMeetingHacks/NickGotelli/ggplotPatchwork.html 
+
+
+For more information on options have a look here:  https://gotellilab.github.io/GotelliLabMeetingHacks/NickGotelli/ggplotPatchwork.html 
 
 
