--- a/scripts/Part_1_Data_Viz_workshop.Rmd
+++ b/scripts/Part_1_Data_Viz_workshop.Rmd
@@ -123,7 +123,7 @@ There are two main functions for creating plots in the ggplot2 package: a `qplot
 Today we'll be using the 'iris' data which is freely available and can be accesssed directly from R.
 
 ```{r}
-data("iris")
+
 ```
 
 Before you plot your data, it's always a good idea to look at the type of data you have. 
@@ -133,7 +133,7 @@ Is your data continuous? Is it categorical?
 Sometimes when you read your data into R, it may suprise you that what you thought would be numerical has been read in as categorical. This can cause problems when you're trying to plot so its always worth checking beforehand and changing the class of your variables. 
 ```{r}
 #confirm the class of the variables
-str(iris)
+
 ```
 In iris, we have 4 numerical variables and 1 factoral variable. These are the expected types for what we want to plot so we can proceed.
 
@@ -154,23 +154,13 @@ qplot(data = iris, x = Petal.Width, y = Petal.Length)
 
 ##### ggplot for when you're wanting to be intentional with plotting
 ```{r}
-#component 1 data
-ggplot(data = iris)
-
-#component 2 variables
-ggplot(iris, aes(x = Petal.Width, y = Petal.Length))
-
-#component 3 variable
-ggplot(data = iris, aes(x = Petal.Width, y = Petal.Length)) + geom_histogram()
 
 
 ```
 
 other plots
 ```{r}
-ggplot(iris, aes(Petal.Width)) +geom_histogram()
 
-ggplot(iris, aes(Petal.Width, Species)) +geom_boxplot()
 
 ```
  
@@ -193,11 +183,7 @@ Colour is used to define a variable you want to group together and distinguish t
 
 ```{r}
 
-ggplot(data = iris, aes(x = Petal.Width, y = Petal.Length, colour = Species)) + geom_point()
 
-ggplot(data = iris, aes(x = Petal.Width, colour = Species)) + geom_histogram()
-
-ggplot(data = iris, aes(x = Petal.Width, fill = Species)) + geom_histogram()
 
 ```
 
@@ -212,10 +198,7 @@ A helpful practice when making ggplots is to assign the plot you’ve made to an
 
 Plots can be saved as a variable using <- assign, and printed at any time by calling the variable. 
 ```{r}
-iris_petal_width_to_length_plot <- ggplot(data = iris, aes(x = Petal.Width, y = Petal.Length, colour = Species)) + geom_point()
-
-iris_petal_width_to_length_plot
-
+iris_petal_width_to_length_plot <-
 
 ```
 
@@ -229,7 +212,7 @@ __4. theme__ a theme is a set of visual parameters that controls the background,
 
 ```{r}
 
-iris_petal_width_to_length_plot + theme_bw()
+
 
 ```
 
@@ -259,7 +242,7 @@ mytheme3 <- theme(legend.text = element_text(face = "italic",colour="gray20",
 
 add theme to plot
 ```{r}
-iris_petal_width_to_length_plot + mytheme3
+
 ```
 
 
@@ -270,16 +253,15 @@ __5. stat__ a stat layer applies some kind of statistical transformation to the 
 
 ```{r}
 
-iris_petal_width_to_length_plot + mytheme3 + stat_smooth(method = "lm")
 
 ```
 
 
 
-__6. labs__ stands for labels
+__6. labs__ stands for labels. You can add labels like title, x axis, y axis.
 
 ```{r}
-iris_petal_width_to_length_plot + mytheme3 + stat_smooth(method = "lm") + labs(title = "Iris Petal Width compared to length", x = "Petal Width (cm)", y = "Petal Length (cm)")
+
 
 ```
 
@@ -294,16 +276,12 @@ Alternatively you could use the pdf function.
 
 save your plot
 ```{r}
-dir.create("plots/")
 
-pdf("plots/iris_petal_width_to_length_plot.pdf")
-iris_petal_width_to_length_plot + mytheme3 + stat_smooth(method = "lm")
-dev.off()
 ```
 
 Alternatively
 ```{r}
-ggsave("plots/my_iris_plot2.png")
+
 ```
 
 
